--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "author": "AlexandrGer",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "celebrate": "^15.0.1",
     "express": "^4.18.2",
-    "mongoose": "^7.4.3"
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.3",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "eslint": "^8.2.0",
