--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "AlexandrGer",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
     "express": "^4.18.2",
